[package]
name = "psfparser"
version = "0.1.4"
edition = "2021"
description = "A PSF reader written in Rust"
readme = "README.md"
license = "BSD-3-Clause"
exclude = ["/examples"]

[dependencies]
enumify = { version = "0.2.1", path = "../enumify", registry = "substrate" }

anyhow = "1"
pest = "2"
pest_derive = "2"
float_eq = "1"
num = { version = "0.4", features = ["serde"] }

[dev-dependencies]
approx = "0.5"
