[package]
name = "scir"
version = "0.2.0"
edition = "2021"

[dependencies]
arcstr = { version = "1", features = ["serde"] }
rust_decimal = "1.31"
rust_decimal_macros = "1.31"
tracing = "0.1"
serde = "1"

diagnostics = { version = "0.1.0", path = "../diagnostics", registry = "substrate" }
opacity = { version = "0.1.0", path = "../opacity", registry = "substrate" }
uniquify = { version = "0.2.0", path = "../uniquify", registry = "substrate" }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
test-log = { version = "0.2", default-features = false, features = ["trace"] }
