[package]
name = "scir"
version = "0.9.1"
edition = "2024"

[dependencies]
arcstr = { version = "1", features = ["serde"] }
rust_decimal = "1"
tracing = "0.1"
serde = "1"
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"

diagnostics = { version = "0.4.0", path = "../diagnostics", registry = "substrate" }
uniquify = { version = "0.4.0", path = "../uniquify", registry = "substrate" }
enumify = { version = "0.2.1", path = "../enumify", registry = "substrate" }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
test-log = { version = "0.2", default-features = false, features = ["trace"] }
