[package]
name = "type_dispatch"
version = "0.5.1"
edition = "2021"
description = "Utilities for dispatching functions, constants, and trait implementations based on types."
license = "BSD-3-Clause"

[dependencies]
duplicate = "2"

type_dispatch_macros = { version = "0.4.1", registry = "substrate", path = "../type_dispatch_macros" }

