[package]
name = "type_dispatch_macros"
version = "0.4.1"
edition = "2024"
description = "Macros for the `type_dispatch` crate."
license = "BSD-3-Clause"

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "3"
itertools = "0.14"

[dev-dependencies]
type_dispatch = { version = "<=0.5.1", registry = "substrate", path = "../type_dispatch" }

[lib]
proc-macro = true
